--- a/static/css/patient_history.css
+++ b/static/css/patient_history.css
@@ -4,7 +4,7 @@ body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     margin: 0;
     padding: 0;
-    background-image: url('/static/images/heart_photo.png');
+    background-image: url('/static/images/medical_records.jpg');
     background-size: cover;
     background-attachment: fixed; /* Keep the background fixed while scrolling */
     color: #444;
@@ -219,20 +219,4 @@ tr:hover {
 }
 .reset-button:hover {
     background-color: #d32f2f; /* Darker red on hover */
-}
-
-/* Back Button Styles */
-.back-btn {
-    display: inline-block;
-    margin-bottom: 20px; /* Space below the button */
-    padding: 10px 15px;
-    background-color: #3498db; /* Same color as other buttons */
-    color: white;
-    text-decoration: none;
-    border-radius: 5px;
-    transition: background-color 0.3s ease;
-}
-
-.back-btn:hover {
-    background-color: #2980b9; /* Darker shade on hover */
 }
